@@ -1,0 +1,24 @@
+# Copyright 1999-2011 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/slop/slop-2.1.0.ebuild,v 1.1 2011/08/06 06:29:34 graaff Exp $
+
+EAPI=4
+USE_RUBY="ruby18 ree18 jruby"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="CHANGES.md README.md"
+
+inherit ruby-fakegem
+
+DESCRIPTION="A simple option parser with an easy to remember syntax and friendly API."
+HOMEPAGE="https://github.com/injekt/slop"
+SRC_URI="https://github.com/injekt/slop/tarball/v${PV} -> ${P}.tgz"
+RUBY_S="injekt-slop-*"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64"
+
+IUSE=""
+
+ruby_add_bdepend "test? ( dev-ruby/minitest )"
